2015-01-05  dmg  <dmg@uvic.ca>

	* filter/criticalword.dict: MIT+no-false-attribs license missing one sentence

	* senttok/licensesentence.dict (MITpermissionExtrict): there was a space where no space should have been

2014-06-09  dmg  <dmg@uvic.ca>

	* Version 1.2

	* Changed license to GPLv2+

2013-07-07  dmg  <dmg@uvic.ca>

	* Version 1.1

	* Cleaned up the output of Apache v2

2013-07-03  dmg  <dmg@uvic.ca>

	* Version to 1.1 RC2

	* Added qt variants and fixed more GPL related unknowns.

	* When the license is unknown "UNKNOWN" is printed.

2013-07-02  dmg  <dmg@uvic.ca>

	* Added version to ninka.pl, set to 1.1 RC1

	* matcher/rules.dict: Added CDDLorGPLv2, CPLv1orGPLv2+orLGPLv2, QtorGPLv2orv3

	* senttok/licensesentence.dict: the boost license sometimes contains just the URL refernece, fixed several regressions.

	* matcher/rules.dict: Renamed the openSSLvar2 to Apachev1.0

	* matcher/matcher.pl: added fields to ignore in MPLv1.1

	* the mozilla trilicense was not properly identified in the GPLv2+ or LGPLv2.1+

	* matcher/matcher.pl: Added GPL2orOpenIB to the rules. Allowed
	spaces in the defintion of the rules

2013-07-01  dmg  <dmg@uvic.ca>

	* filter/criticalword.dict: tighten some definitions to avoid
	false positives without hurting precision. In particular, removed
	"subject" as a "legal" term.

	* senttok/licensesentence.dict (publicDomain): Added another public domain.

2011-02-08    <dmg@uvic.ca>

	* senttok/licensesentence.dict: Renamed the GPLVer2+KDE to
	GPLVer2or3KDE+, which I believe is more appropriate (license GPL
	v2, v3 or any further version approved by the KDE e.v.

2011-02-03    <dmg@uvic.ca>

	* extComments/extComments.pl (Determine_Comments_Extractor): Fixed
	a bug introduced in the comments extractor.

	* matcher/rules.dict: Fixed a bug in the sunRPM license. It wasn't detected.

	* filter/criticalword.dict: strenghten some rules to avoid some
	false positives in good sentences.

2011-01-28    <dmg@uvic.ca>
